# Racoonflix

./: .dockerignore  README.md  docker-compose.yml  package-lock.json  package.json  populateMongo.py  test_app.py
RecommendSystem/: Dockerfile  DockerfileClient  DockerfileTests
RecommendSystem/src/: main.cpp
RecommendSystem/src/Tests/: CMakeLists.txt  CommandFeaturesTest.cpp  FileIOTest.cpp  GetTest.cpp  PatchTest.cpp
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
api/controllers/: category.js
backend/: .gitignore  Dockerfile  app.js  docker-compose.yml  package-lock.json  package.json  populateMongo.py
backend/RecommendSystem/: docker-compose.yml
backend/RecommendSystem/src/: App.h  CMakeLists.txt
backend/RecommendSystem/src/Commands/: AddCommand.cpp  DeleteCommand.cpp  GetCommand.h  HelpCommand.cpp  PostCommand.cpp  PostCommand.h
backend/RecommendSystem/src/Interfaces/: IHelpInfo.h  IIO.h
backend/RecommendSystem/src/Socket/: Server.cpp  Server.h  ThreadPool.h
backend/RecommendSystem/src/Tests/: HelpTest.cpp  PostTest.cpp  ServerTest.cpp
backend/controllers/: category.js  movie.js  schema.js  token.js  user.js
backend/middleWare/: uploadFile.js
backend/models/: user.js
backend/routes/: movie.js  (+3 more)
controllers/: movie.js  user.js
frontend/: Dockerfile  package-lock.json  package.json
images/: desktop.ini
models/: category.js  counter.js  movie.js
my-netflix/: package.json
routes/: category.js  user.js
services/: token.js  user.js
wiki/: Android-App.md  Backend.md  Frontend.md  Getting-Started.md  Home.md
(+140 files in other folders)
